ZPI-58: Added error 500 to endpoints, fix k8s update body, remove unused params from k8s list (#12)
