# backend/models/model_resource_list_resource_list.go
@@ -3,7 +3,7 @@
  *
  * This is a backend API server documentation for KubernetesAccessManager  Some useful links: - [Jira](https://samuelus.atlassian.net/jira/software/projects/ZPI/boards/4) - [Confluence](https://samuelus.atlassian.net/wiki/spaces/ZPI/overview)
  *
- * API version: 0.0.2
+ * API version: 0.0.3
  * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
  */
 package models
@@ -29,16 +29,12 @@ type ResourceListResourceList struct {
 	Containers string `json:"containers,omitempty"`
 	// Optional value for 'controlled_by'
 	ControlledBy string `json:"controlled_by,omitempty"`
-	// Optional value for 'cpu'
-	Cpu string `json:"cpu,omitempty"`
 	// Optional value for 'current'
 	Current string `json:"current,omitempty"`
 	// Optional value for 'default'
 	Default_ string `json:"default,omitempty"`
 	// Optional value for 'desired'
 	Desired string `json:"desired,omitempty"`
-	// Optional value for 'disk'
-	Disk string `json:"disk,omitempty"`
 	// Optional value for 'external_ip'
 	ExternalIp string `json:"external_ip,omitempty"`
 	// Optional value for 'group'
@@ -51,8 +47,6 @@ type ResourceListResourceList struct {
 	LastSchedule string `json:"last_schedule,omitempty"`
 	// Optional value for 'loadbalancers'
 	Loadbalancers string `json:"loadbalancers,omitempty"`
-	// Optional value for 'memory'
-	Memory string `json:"memory,omitempty"`
 	// Optional value for 'name'
 	Name string `json:"name,omitempty"`
 	// Optional value for 'namespace'
